--- a/frontend/env.example
+++ b/frontend/env.example
@@ -6,3 +6,6 @@ AUTH_SECRET=your-secret-key-here
 # Backend API Configuration
 # Server-side backend URL (used for all API calls via server actions)
 BACKEND_URL=http://localhost:3001
+
+# WebSocket URL for real-time collaboration
+NEXT_PUBLIC_WS_URL=ws://localhost:3001
