--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "morgan": "^1.10.0",
     "redis": "^5.5.6",
     "uuid": "^9.0.1",
+    "ws": "^8.18.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.10.5",
     "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
     "eslint": "^9.30.0",
