--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@reduxjs/toolkit": "^2.8.2",
     "@t3-oss/env-nextjs": "^0.13.8",
+    "@types/quill": "^2.0.14",
     "@types/react-redux": "^7.1.34",
     "@uidotdev/usehooks": "^2.4.1",
     "class-variance-authority": "^0.7.1",
@@ -26,12 +27,19 @@
     "lucide-react": "^0.525.0",
     "next": "15.3.4",
     "next-auth": "^5.0.0-beta.29",
+    "quill": "^2.0.3",
+    "quill-cursors": "^4.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.59.0",
     "react-redux": "^9.2.0",
     "redux-logger": "^3.0.6",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.3.1",
+    "y-protocols": "^1.0.6",
+    "y-quill": "^1.0.0",
+    "y-websocket": "^3.0.0",
+    "yjs": "^13.6.27",
     "zod": "^3.25.67"
   },
   "devDependencies": {
@@ -43,6 +51,7 @@
     "@types/redux-logger": "^3.0.13",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
+    "sass": "^1.89.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4",
     "typescript": "^5"
